2010-08-25  Luis Machado  <luisgpm@br.ibm.com>

	* sysdeps/soft-dfp/floatsisd.c: Don't generate additional decimal
	digit.

2010-08-24  Ryan S. Arnold  <rsa@us.ibm.com>

	* README.developer: Documentation update.
	* TODO: Mark some items as [DONE].

2010-08-23  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	* init_dfp.c: Changed #include <dfp/dfp.h> to #include <dfp.h>.

2010-08-12  Luis Machado  <luisgpm@us.ibm.com>

	* tests/test-amort.c: Added license and copyright.
	* tests/test-printf.c: Updated copyright year.
	* tests/test-strtod.c: Added license and copyright.  Corrected
	incorrect expected values.
	* strtod32.c: Fixed several conversion bugs.

2010-08-12  Ryan S. Arnold  <rsa@us.ibm.com>

	* Makefile.in: Removed test-left_justify from execution since it is a
	known failure case for non-power6 systems.  No worries since
	left_justify isn't used right now.
	* tests/test-amort.c: Removed spurious #include <dfp.h>.
	* tests/test-get_digits.c: Likewise.
	* tests/test-decode.c: Likewise.
	* tests/test-quantize.c: Likewise.
	* tests/test-printf.c: Likewise.
	* tests/test-fpclassify.c: Likewise.
	* tests/test-numdigits.c: Likewise.
	* tests/test-left_justify.c: Likewise.
	* tests/test-isinf.c: Likewise.
	* tests/test-isnan.c: Likewise.
	* tests/test-isfinite.c: Likewise.
	* tests/test-strtod.c: Likewise.  Also changed one value compare test
	to a decode test since the visual representation was 0.0.
	* README.user: Added further user notes.
	* dfp/dfp.h: Moved this to ...
	* include/dfp.h: here since the user no longer has to call the
	printf_dfp registration hooks, and thus doens't need the prototype.

2010-08-11  Ryan S. Arnold  <rsa@us.ibm.com>

	 configure: Regenerated.
	 configure.ac: Added AC_SUBST(mzarch) back.  We shouldn't be editing
	 CFLAGS.
	 Makefile.in: Pass $(mzarch) along with CFLAGS if it is defined.

2010-08-06  Ryan S. Arnold  <rsa@us.ibm.com>

	* configure: Regenerated.
	* Makefile.in: Added special sed script which changes